# benchmark

./: .env.example  .gitignore  BU_Bench_V1.enc  README.md  generate_plots.py  judge.py  orchestrator.py  pyproject.toml  run_batch.py  run_eval.py  run_stealth_eval.py
browsers/: __init__.py  spider.py
stealth_bench/official_plots/: category_breakdown_light.md
stealth_bench/official_results/: Stealth_Bench_V1_browser_spider-cloud_model_bu-2-0.json
