[project]
name = "browser-use-benchmark"
version = "0.1.0"
description = "Open source benchmark for browser-use"
requires-python = ">=3.11"
dependencies = [
    "browser-use==0.11.4",
    "cryptography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
