[project]
name = "browser-use-benchmark"
version = "0.1.0"
description = "Open source benchmark for browser-use"
requires-python = ">=3.11"
dependencies = [
    "browser-use==0.11.5",
    "cryptography",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
plots = ["matplotlib", "numpy"]

[tool.hatch.build.targets.wheel]
packages = ["."]
